# langchain1.0

./: .env  .gitignore  01-hello-ollama.py  02-hello-deepseek-api.py  03-semantic-search-index.py  04-semantic-search.py  05-chromadb-tool.py  06-agent-basic.py  07-agent-basic-tools.py  08-agent-basic-stream.py  09-agent-memory.py  10-agent-InMemorySaver.py  11-Stategraph-checkpointer.py  12-agent-real-world.py  13-RAG-index.py  14-RAG-agent.py  15-human-in-the-loop.py  16-sql-agent.py  17-sql-agent-HITL.py  19-agent-tavily.py  20-deepagent.py  README.md  pyproject.toml  requirements.txt
18-multi-agent/: README.md  calendar_agent.py  email_agent.py  langgraph.json  supervisor_agent.py
chroma_langchain_db/: chroma.sqlite3
