[project]
name = "langchain1-0"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.3.5",
    "langchain>=1.1.0",
    "langchain-chroma>=1.0.0",
    "langchain-community>=0.4.1",
    "langchain-deepseek>=1.0.1",
    "langchain-huggingface>=1.1.0",
    "langchain-ollama>=0.1.0",
    "pypdf>=6.4.0",
    "sentence-transformers>=5.1.2",
    "torch>=2.9.1",
    "torchaudio>=2.9.1",
    "torchvision>=0.24.1",
    "unstructured>=0.18.21",
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true

[tool.pyright]
# 关闭对 LangChain 的严格检查
reportMissingImports = "none"
reportFunctionMemberAccess = "none"
